Fix collection-gate idempotent-replay contract and drop an unrelated starter refactor
Documents the IDEMPOTENT/null-submissionId fallback for a client token whose original
item was since replaced or withdrawn, removes an internal design-doc citation from
shipped Javadoc, and reverts an out-of-scope RunMdcContext refactor that had ridden
along with this change.